// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toc Provider filters fileids when filtering is set 1`] = `
{
  "collapsibleState": "None",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/path/to/file",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "contextValue": "rename,delete",
  "description": "fileId",
  "iconPath": "File",
  "label": "title",
  "resourceUri": {
    "$mid": 1,
    "path": "/path/to/file",
    "scheme": "file",
  },
}
`;

exports[`Toc Provider filters fileids when filtering is set 2`] = `
{
  "collapsibleState": "None",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/path/to/file",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "contextValue": "rename,delete",
  "iconPath": "File",
  "label": "title (fileId)",
  "resourceUri": {
    "$mid": 1,
    "path": "/path/to/file",
    "scheme": "file",
  },
}
`;

exports[`Toc Provider filters fileids when filtering is set 3`] = `
{
  "collapsibleState": "None",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/path/to/file",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "contextValue": "rename,delete",
  "description": "fileId",
  "iconPath": "File",
  "label": "title",
  "resourceUri": {
    "$mid": 1,
    "path": "/path/to/file",
    "scheme": "file",
  },
}
`;

exports[`Toc Provider returns tree items for children 1`] = `
{
  "collapsibleState": "Collapsed",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/some/path",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "description": "slug",
  "iconPath": ThemeIcon {},
  "label": "title",
  "resourceUri": {
    "$mid": 1,
    "path": "/some/path",
    "scheme": "file",
  },
}
`;

exports[`Toc Provider returns tree items for children 2`] = `
{
  "collapsibleState": "Collapsed",
  "contextValue": "rename",
  "iconPath": "Folder",
  "label": "title",
}
`;

exports[`Toc Provider returns tree items for children 3`] = `
{
  "collapsibleState": "None",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/path/to/file",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "contextValue": "rename",
  "description": "fileId",
  "iconPath": "File",
  "label": "title",
  "resourceUri": {
    "$mid": 1,
    "path": "/path/to/file",
    "scheme": "file",
  },
}
`;

exports[`Toc Provider returns tree items for children 4`] = `
{
  "collapsibleState": "Collapsed",
  "contextValue": "rename",
  "iconPath": "Folder",
  "label": "title",
}
`;

exports[`filtering toggleTocTreesFilteringHandler 1`] = `
[
  [
    {
      "children": [],
      "label": "m1",
    },
    {
      "expand": 3,
    },
  ],
  [
    {
      "children": [],
      "label": "m2",
      "type": "TocNodeKind.Page",
    },
    {
      "expand": 3,
    },
  ],
]
`;
